--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,31 @@
 #Basic Spring Boot Config for Oracle
-spring.datasource.url= jdbc:oracle:thin:@//spring.guru.csi0i9rgj9ws.us-east-1.rds.amazonaws.com:1521/ORCL
-spring.datasource.username=system
-spring.datasource.password=manager
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url= jdbc:oracle:thin:@localhost:1521/carcenter
+#spring.datasource.username=system
+#spring.datasource.password=Leon12345
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#
+##hibernate config
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 
-#hibernate config
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/carcenter
+
+# nombre de usuario y contraseña
+spring.datasource.username=root
+spring.datasource.password=Leon12345
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+## mostrar sentencias SQL en la consola
+#spring.jpa.show-sql = true
+
+# actualizar base de datos y crear entidades
 spring.jpa.hibernate.ddl-auto=create-drop
+
+## hibernate genera SQL optimizado
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect.storage_engine=innodb spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
